[tool.poetry]
name = "pythonproject"  # ✅ Must match the folder name
version = "0.1.0"
description = ""
authors = ["HimaniKM <himanikothakotamaana@gmail.com>"]

packages = [{include = "pythonproject"}]  # ✅ Ensure this matches your package folder
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"  # Example dependency (add others as needed)
pandas = "^2.0.0"

[tool.poetry.scripts]
get-papers-list = "pythonproject.cli:main"  # ✅ Must match cli.py location



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
